--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="./component/common/button/button.css">
+    <link rel="stylesheet" href="./component/common/itemContacto/itemContacto.css">
+    <link rel="stylesheet" href="./component/sections/Contacto/contactos.css">
+    <link rel="stylesheet" href="./component/sections/formularioContacto/formularioContacto.css">
 </head>
 <body>
     <main id="app">
