Correccion de errores, implementacion de ToDoList, y CSS

--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./component/common/itemContacto/itemContacto.css">
     <link rel="stylesheet" href="./component/sections/Contacto/contactos.css">
     <link rel="stylesheet" href="./component/sections/formularioContacto/formularioContacto.css">
+    <link rel="stylesheet" href="./component/sections/tareas/tareas.css">
+    <link rel="stylesheet" href="./component/sections/tareas/tareas.css">
+
 </head>
 <body>
     <main id="app">
