--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="src/component/sections/login/login.css">
+    <link rel="stylesheet" href="./src/component/sections/login/login.css">
+    <link rel="stylesheet" href="./src/component/sections/formularioContacto/formularioContacto.css">
+    <link rel="stylesheet" href="./src/component/sections/tareas/tareas.css">
+    <link rel="stylesheet" href="./src/component/sections/Contacto/contactos.css">
+    <link rel="stylesheet" href="./src/component/sections/ItemContacto/itemContacto.css">
+
+
 </head>
 <body>
     <main id="root"></main>
-
     <script src="index.js" type="module"></script>
 
 </body>
